--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Herrera Multimedia: Soluciones Creativas de Comunicación Visual">
   <meta property="og:description" content="Explora mis trabajos. Aquí encontrarás todos mis enlaces a redes sociales y mi portafolio de desarrollo web y diseño gráfico.">
   <meta property="og:image" content="img/LogoOficial.jpg">
-  <meta property="og:url" content=" ">
+  <meta property="og:url" content="https://herreramultimedia.github.io/social-profile-links/">
   <meta property="og:type" content="profile">
   <meta property="og:locale" content="es_ES">
   <link rel="icon" href="img/Iso-logo.png" type="image/x-icon">
